@@ -1,0 +1,8 @@
+package FusionInventory::Agent::Task::Maintenance::Version;
+
+use strict;
+use warnings;
+
+use constant VERSION => "1.0";
+
+1;
